--- a/index.html
+++ b/index.html
@@ -8,22 +8,42 @@
 <body>
     <div class="wrapper">
         <nav>
-            <ul class="menu">
-                <li class="logo"><a href="#">Invisible App</a></li>
-                <li class="item"><a href="#">Home</a></li>
-                <li class="item"><a href="#">About</a></li>
-                <li class="item"><a href="#">Services</a></li>
-                <li class="item"><a href="#">Features</a></li>
-                <li class="item"><a href="#">Blog</a></li>
-                <li class="item"><a href="#">Contact</a>
-                </li>
-                <li class="item button"><a href="#">Log In</a></li>
-                <li class="item button secondary"><a href="#">Sign Up</a></li>
-                <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">project</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+
+            <ul>
+                <li> <a href="">Facebook</a> </li>
+                <li> <a href="">Feedback</a> </li>
             </ul>
         </nav>
+        <section id="blocks">
+            <article>
+                <h2>My Profile</h2>
+                About Me
+
+Hello World! Nama saya Raif Fahmi,lahir di Cianjur dan juga tinggal di Cianjur sampai sekarang. Saya lulus dari SMKN 1 Cianjur pada tahun 2019.
+Setelah lulus saya mengikuti kursus bahasa Inggris di Sebuah Tempat Kursus bernama Litte Faster.
+Setelah Menyelesaikan Kursus, Saya kembali Fokus dalam mengejar Cita-Cita saya sebagai Seorang Full-Stack Developer.
+Saya pernah di rekrut oleh sebuah perusahaan Kontraktor asal Bengkulu Selatan untuk ikut dalam menyelesaikan Aplikasi SIMRS berbasis Web.
+Saya sudah terbiasa bekerja sebagai team, Karena hampir semua project yang pernah saya kerjakan dikerjakan dalam sebuah team.
+Saya juga memiliki Hobi dalam dunia Editing, Oleh karena itu saya mulai menjadi freelancer Editing sejak duduk di bangku kelas 11 SMK.
+            </article>
+        </section>
+        <section>
+        <article>Contact Me</article>
+        <h2>Contact me</h2>
+        Contact Me!
+
+Email : rraiffahmi@gmail.com
+Telp : +6289503731273
+Whatsapp : +6289503731273
+Facebook : Raif Fahmi 
+        </section>
     </div>
     
-<script src="js/style.js"></script>
 </body>
 </html>
