--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div class="wrapper">
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">project</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#" onclick="MyFunction()">About</a></li>
+                <li><a href="#" onclick="MyFunction()">project</a></li>
+                <li><a href="#" onclick="MyFunction()">Contact</a></li>
             </ul>
 
             <ul>
@@ -33,7 +33,7 @@ Saya sudah terbiasa bekerja sebagai team, Karena hampir semua project yang perna
 Saya juga memiliki Hobi dalam dunia Editing, Oleh karena itu saya mulai menjadi freelancer Editing sejak duduk di bangku kelas 11 SMK.
             </article>
         </section>
-        
+
         <section>
         <article>Contact Me</article>
         <h2>Contact me</h2>
@@ -46,5 +46,10 @@ Facebook : Raif Fahmi
         </section>
     </div>
     
+    <script>
+        function MyFunction() {
+          alert("Coming Soon!!");
+        }
+        </script>
 </body>
 </html>
