--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ Saya juga memiliki Hobi dalam dunia Editing, Oleh karena itu saya mulai menjadi 
             </article>
         </section>
 
-        <section>
-        <article>Contact Me</article>
+        <section id="blocks">
+        <article>
         <h2>Contact me</h2>
-        Contact Me!
 
 Email : rraiffahmi@gmail.com
 Telp : +6289503731273
 Whatsapp : +6289503731273
 Facebook : Raif Fahmi 
+</article>
         </section>
     </div>
     
