--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#" onclick="MyFunction()">About</a></li>
                 <li><a href="#" onclick="MyFunction()">project</a></li>
-                <li><a href="#" onclick="MyFunction()">Contact</a></li>
+                <li><a href="#contact" onclick="MyFunction()" >Contact</a></li>
             </ul>
 
             <ul>
@@ -20,6 +20,7 @@
                 <li> <a href="">Feedback</a> </li>
             </ul>
         </nav>
+        
         <section id="blocks">
             <article>
                 <h2>My Profile</h2>
@@ -33,9 +34,16 @@ Saya sudah terbiasa bekerja sebagai team, Karena hampir semua project yang perna
 Saya juga memiliki Hobi dalam dunia Editing, Oleh karena itu saya mulai menjadi freelancer Editing sejak duduk di bangku kelas 11 SMK.
             </article>
         </section>
-
         <section id="blocks">
-        <article>
+            <article>
+            <h2>My Recent Project</h2>
+
+            <img src="img/project.png" alt="">
+
+            </article>
+        </section>
+        <section id="blocks">
+        <article id="contact"> 
         <h2>Contact me</h2>
 
 Email : rraiffahmi@gmail.com
